--- a/images/meat_collection_Step1_open_config.yaml
+++ b/images/meat_collection_Step1_open_config.yaml
@@ -2,7 +2,7 @@ defult_click_point:
   x: 32
   y: 617
 method: None
-picture_path: images/wood_collection_Step1_open.png
+picture_path: images/meat_collection_Step1_open.png
 region:
   bottom: 632
   left: 18
@@ -10,4 +10,4 @@ region:
   top: 602
 swipe: null
 threshold: 0.8
-window_name: wood_collection_Step1
+window_name: meat_collection_Step1
