--- a/images/meat_collection_Step4_open_config.yaml
+++ b/images/meat_collection_Step4_open_config.yaml
@@ -1,8 +1,8 @@
 defult_click_point:
   x: 254
   y: 442
-method: check
-picture_path: images/wood_collection_Step4_open.png
+method: find
+picture_path: images/meat_collection_Step4_open.png
 region:
   bottom: 464
   left: 188
@@ -10,4 +10,4 @@ region:
   top: 421
 swipe: null
 threshold: 0.8
-window_name: wood_collection
+window_name: meat_collection_Step4
