--- a/images/meat_collection_Step5_open_config.yaml
+++ b/images/meat_collection_Step5_open_config.yaml
@@ -2,7 +2,7 @@ defult_click_point:
   x: 300
   y: 225
 method: None
-picture_path: images/wood_collection_Step5_open.png
+picture_path: images/meat_collection_Step5_open.png
 region:
   bottom: 242
   left: 285
@@ -10,4 +10,4 @@ region:
   top: 209
 swipe: null
 threshold: 0.8
-window_name: wood_collection
+window_name: meat_collection_Step5
