--- a/images/meat_collection_Step6_window_config.yaml
+++ b/images/meat_collection_Step6_window_config.yaml
@@ -2,7 +2,7 @@ defult_click_point:
   x: 384
   y: 310
 method: check
-picture_path: images/wood_collection_Step6_window.png
+picture_path: images/meat_collection_Step6_window.png
 region:
   bottom: 404
   left: 331
@@ -10,4 +10,4 @@ region:
   top: 217
 swipe: null
 threshold: 0.8
-window_name: wood_collection
+window_name: meat_collection_Step6
