--- a/images/meat_collection_Step7_window_config.yaml
+++ b/images/meat_collection_Step7_window_config.yaml
@@ -2,7 +2,7 @@ defult_click_point:
   x: 24
   y: 189
 method: find
-picture_path: images/wood_collection_Step7_window.png
+picture_path: images/meat_collection_Step7_window.png
 region:
   bottom: 197
   left: 16
@@ -10,4 +10,4 @@ region:
   top: 182
 swipe: null
 threshold: 0.8
-window_name: wood_collection
+window_name: meat_collection_Step7
