--- a/images/collection_Step4_open_config.yaml
+++ b/images/collection_Step4_open_config.yaml
@@ -2,7 +2,7 @@ defult_click_point:
   x: 254
   y: 442
 method: find
-picture_path: images/meat_collection_Step3_window.png
+picture_path: images/collection_Step4_open.png
 region:
   bottom: 464
   left: 188
@@ -10,4 +10,4 @@ region:
   top: 421
 swipe: null
 threshold: 0.8
-window_name: meat_collection_Step3
+window_name: collection_Step4
