--- a/images/return_button_config.yaml
+++ b/images/return_button_config.yaml
@@ -1,20 +1,13 @@
 defult_click_point:
-  x: 31
-  y: 24
+  x: 30
+  y: 26
 method: check
-picture_path: images/return_button.png
+picture_path: images/return_button_window.png
 region:
-  bottom: 44
-  left: 4
-  right: 58
-  top: 4
-swipe:
-  duration: 0.5
-  end:
-    x: 162
-    y: 300
-  start:
-    x: 160
-    y: 540
+  bottom: 45
+  left: 8
+  right: 52
+  top: 8
+swipe: null
 threshold: 0.8
 window_name: return_button
