--- a/images/collection_Step5_open_config.yaml
+++ b/images/collection_Step5_open_config.yaml
@@ -1,7 +1,7 @@
 defult_click_point:
   x: 300
   y: 225
-method: None
+method: check
 picture_path: images/collection_Step5_open.png
 region:
   bottom: 242
