--- a/images/warehouse_rewards_open_config.yaml
+++ b/images/warehouse_rewards_open_config.yaml
@@ -1,7 +1,7 @@
 defult_click_point:
-  x: 51
-  y: 406
-method: swipe_check
+  x: 32
+  y: 581
+method: swipe_find
 picture_path: images/warehouse_rewards_open.png
 region:
   bottom: 440
@@ -17,4 +17,4 @@ swipe:
     x: 160
     y: 540
 threshold: 0.8
-window_name: warehouse_rewards_open
+window_name: warehouse_rewards
