--- a/images/collection_Step4_window_config.yaml
+++ b/images/collection_Step4_window_config.yaml
@@ -1,13 +1,13 @@
 defult_click_point:
-  x: 73
-  y: 212
-method: None
+  x: 386
+  y: 851
+method: check
 picture_path: images/collection_Step4_window.png
 region:
-  bottom: 217
-  left: 69
-  right: 77
-  top: 207
+  bottom: 879
+  left: 284
+  right: 488
+  top: 824
 swipe: null
 threshold: 0.8
 window_name: collection_Step4
