--- a/images/left_window_city_open_config.yaml
+++ b/images/left_window_city_open_config.yaml
@@ -1,7 +1,7 @@
 defult_click_point:
   x: 81
   y: 190
-method: check
+method: None
 picture_path: images/left_window_city_open.png
 region:
   bottom: 197
