--- a/images/shield_training_complete_open_config.yaml
+++ b/images/shield_training_complete_open_config.yaml
@@ -1,7 +1,7 @@
 defult_click_point:
   x: 284
   y: 393
-method: check
+method: None
 picture_path: images/shield_training_complete_open.png
 region:
   bottom: 410
