--- a/images/train_Step1_open_config.yaml
+++ b/images/train_Step1_open_config.yaml
@@ -1,7 +1,7 @@
 defult_click_point:
   x: 271
   y: 357
-method: find
+method: None
 picture_path: images/train_Step1_open.png
 region:
   bottom: 395
