--- a/images/left_window_window_config.yaml
+++ b/images/left_window_window_config.yaml
@@ -1,20 +1,13 @@
 defult_click_point:
-  x: 78
-  y: 190
-method: None
+  x: 326
+  y: 387
+method: check
 picture_path: images/left_window_window.png
 region:
-  bottom: 208
-  left: 6
-  right: 150
-  top: 172
-swipe:
-  duration: 0.5
-  end:
-    x: 0
-    y: 0
-  start:
-    x: 0
-    y: 0
+  bottom: 401
+  left: 319
+  right: 334
+  top: 374
+swipe: null
 threshold: 0.8
-window_name: left_window_window
+window_name: left_window
